# EVM

./: .buildconfig  .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/src/: main.cpp  memory.txt  sc_header.hpp
lab2/src/: main.cpp  mt_header.hpp  sc_header.hpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp
lab4/src/: id_header.hpp  main.cpp  mt_header.hpp  sc_header.hpp
src/: ass.cpp  ass.hpp  bc_header.hpp  fact.asm  header.hpp  header2.hpp  header3.hpp  id_header.hpp  main.cpp  mt_header.hpp  rk_header.hpp  sc_header.hpp
